--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proofreading-tool",
   "version": "1.0.0",
   "description": "Webメディア校正・校閲ツール",
+  "type": "module",
   "scripts": {
     "dev": "vercel dev",
     "build": "echo 'Build complete'"
